treesitter-ros/corpus/builtin.txt
=============
builtin types
=============

bool a
int8 b
uint8 c
int16 d
uint16 e
int32 f
uint32 g
int64 h
uint64 i
float32 j
float64 k
string l
time m
duration o

----

(source_file
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier)))
  (field_definition
    (field_type
      (builtin_type))
    (field_name
      (identifier))))
